# aoc

./: Cargo.toml
input/y2015/: d10  d11  d12  d14  d15  d16  d17  d18  d20  d24  d9
input/y2016/: d10  d2  d21  d23  d24  d3  d6  d7
input/y2021/: d1  d2  d4  d5  d6  d7  d8
src/: main.rs  vek.rs
src/helpers/: character_set.rs  grid.rs  line.rs  mod.rs  node.rs  spiral.rs  store.rs  volume.rs
src/y2015/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2016/: d1.rs  d10.rs  d11.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2017/: d1.rs  d2.rs  d3.rs
src/y2018/: d13.rs
src/y2020/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs
src/y2021/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs
src/y2022/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2023/: d1.rs  d10.rs  d11.rs  d18.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
