[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "*"
seq-macro = "*"
chrono = "0.4"
rayon = "1.5"
rayon-hash = "0.5.0"
itertools = "0.10"
hashbrown = "0.11"
md5 = "0.7"
serde = "1.0"
serde_json = "1.0"
integer-sqrt = "0.1"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.8"
strp = "1.1.1"
iterslide = "1.0.1"
colored = "2.0.0"
vek = { version = "0.15.9", features = ["repr_simd"] }
petgraph = "0.6.2"
pathfinding = "4.0.0"
lazy_static = "1.4.0"
enum-map = "2.5.0"
stackvec = "0.2.1"
