[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "*"
seq-macro = "*"
chrono = "0.4"
rayon = "1.10"
rayon-hash = "0.5"
itertools = "0.13"
hashbrown = "0.15"
md5 = "0.7"
serde = "1.0"
serde_json = "1.0"
integer-sqrt = "0.1"
num-traits = "0.2"
num-derive = "0.4"
rand = "0.8"
strp = "1.1.2"
iterslide = "1.0"
colored = "2.1"
vek = { version = "0.17" }
petgraph = "0.6"
pathfinding = "4.11"
lazy_static = "1.5"
enum-map = "2.7"
stackvec = "0.2"
bitvec = "1.0"
num = "0.4"
enumset = "1.1"
strum = { version = "0.26", features = ["derive"] }
